website/versioned_docs/version-0.10.0/quickstart.mdx
---
id: quickstart
title: Quick Start
sidebar_label: Quick Start
slug: /
---


import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';


:::note
ModuleCheck leverages Gradle for parsing all build logic, so validation works regardless of whether that logic is expressed in Groovy or Kotlin.

However, auto-correction of errors is only done by parsing Kotlin files via PSI.  Groovy auto-correction is not supported.
:::

## Dependencies

<Tabs
groupId="language"
defaultValue="Kotlin"
values={[
{label: 'Kotlin', value: 'Kotlin'},
{label: 'Groovy', value: 'Groovy'},
]}>

   <TabItem value="Kotlin" default>

```kotlin
// settings.gradle.kts

pluginManagement {
  repositories {
    gradlePluginPortal()
  }
}
```

```kotlin
// top-level build.gradle.kts

plugins {
  id("com.rickbusarow.module-check") version "0.10.0"
}
```

   </TabItem>

<TabItem value="Groovy">

```groovy
// settings.gradle

pluginManagement {
  repositories {
    gradlePluginPortal()
  }
}
```

```groovy
// top-level build.gradle

plugins {
  id "com.rickbusarow.module-check" version "0.10.0"
}
```

   </TabItem>
</Tabs>

## Configuration

See [configuration](./configuration.mdx) for a full list of options.

<Tabs
groupId="language"
defaultValue="Kotlin"
values={[
{label: 'Kotlin', value: 'Kotlin'},
{label: 'Groovy', value: 'Groovy'},
]}>


   <TabItem value="Kotlin" default>

```kotlin
// top-level build.gradle.kts

configure<com.rickbusarow.modulecheck.ModuleCheckExtension> {

  alwaysIgnore.set(setOf(":app"))

  checks {
    redundant.set(false)
  }
}
```
--or--

```kotlin
// top-level build.gradle.kts

moduleCheck {

  alwaysIgnore.set(setOf(":app"))

  checks {
    redundant.set(false)
  }
}
```

   </TabItem>


<TabItem value="Groovy">

```groovy
// top-level build.gradle

moduleCheck {

  alwaysIgnore.set(setOf(":app"))

  checks {
    redundant.set(false)
  }
}
```

   </TabItem>
</Tabs>
